force-app/main/default/objects/Onboarding_Document_Checklist__c/Onboarding_Document_Checklist__c.object-meta.xml
<CustomObject>
    <label>Onboarding Document Checklist</label>
    <nameField>
        <label>Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Document Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>