force-app/main/default/objects/Onboarding_Document_Checklist__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <label>Assigned Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>