force-app/main/default/objects/Onboarding_Document_Checklist__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Onboarding Document Checklists</relationshipLabel>
    <relationshipName>Onboarding_Document_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>