force-app/main/default/objects/Onboarding_Document_Checklist__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Legal &amp; Entity</fullName><default
        >false</default><label>Legal &amp; Entity</label></value>
            <value><fullName>Compliance &amp; Regulatory</fullName><default
        >false</default><label>Compliance &amp; Regulatory</label></value>
            <value><fullName>Authorized Traders</fullName><default
        >false</default><label>Authorized Traders</label></value>
            <value><fullName>Financial</fullName><default>false</default><label
        >Financial</label></value>
            <value><fullName>Other</fullName><default>false</default><label
        >Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>