force-app/main/default/objects/Onboarding_Document_Checklist__c/fields/Items_Total__c.field-meta.xml
<CustomField>
    <fullName>Items_Total__c</fullName>
    <label>Items Total</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>